# whalecopier

./: .env.example  .gitignore  AGENT_CONTINUATION_PROMPT.md  API_ACCESS_STATUS.md  AWS_KMS_SETUP 2.md  BACKTEST_BUG_ANALYSIS.md  BACKTEST_REDESIGN_PLAN.md  BLOCKCHAIN_DATA_FINDINGS.md  BUGS_SUMMARY.txt  BUG_FIXES_REQUIRED.md  BUG_TESTING_REPORT.md  BUG_TEST_RESULTS_INDEX.md  CLEANUP_AND_AGENTS_COMPLETE.md  COMPLETE_16_WEEK_SUMMARY.md  COMPLETE_SYSTEM_SUMMARY.md  COMPREHENSIVE_PRODUCT_ROADMAP.md  COPY_TRADING_COMPLETE.md  COPY_TRADING_SETUP_COMPLETE.md  CRITICAL_PNL_ISSUE.md  CURRENT_STATUS.md  CURRENT_WHALE_STATUS.md  DEPLOYMENT_COMPLETE 2.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  Dockerfile 2.api  FINAL_STATUS_AND_NEXT_STEPS.md  FINAL_TEST_RESULTS.txt  FRONTEND_GUIDE.md  FRONTEND_README.md  GETTING_REAL_TRADES.md  GET_1000_WHALES.md  GITHUB_SETUP.md  GRAPH_IMPLEMENTATION_SUCCESS.md  HOW_TO_ADD_MORE_WHALES.md  HOW_TO_FIND_WHALES.md  HYBRID_MAS_ARCHITECTURE 2.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  LIVE_TRADING.md  (+78 more)
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 002_add_market_resolutions.py  20251031_1220-3254c910aa28_initial_schema.py  20251031_1619-2a0720202a01_add_24h_metrics_and_recent_trade_columns.py  20251103_0000-add_trading_config_kill_switch.py
api/: main.py
api/static/: dashboard.html
config/: advanced_copy_trading.json  copy_trading_rules.json  display_settings.json  prometheus.yml  settings 2.json  settings.json
dashboard/: production_dashboard.py
db/migrations/: 004_create_orders_tables.sql  005_create_positions_table.sql
deploy/: deploy.sh
docs/: GRAPH_API_SETUP_GUIDE.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  PROFITABLE_WHALES_DATABASE.md  WEEK2_ARCHITECTURE.md  WHALE_STRATEGY_FRAMEWORK.md
frontend/: index.html  package-lock.json  package.json  server.py  settings.css  settings.html  settings_component 2.tsx  settings_display_mockup.html  unified_dashboard 2.html  unified_dashboard.html
frontend/src/: App.jsx  index 2.css
infrastructure/: otel-collector-config.yaml
infrastructure/grafana/: loki-config.yaml  promtail-config.yaml
libs/analytics/: bayesian_scoring.py  consistency.py  enhanced_wqs.py  performance_attribution.py
libs/backtesting/: backtest_engine.py
libs/common/: market_resolver.py  models.py
libs/trading/: bet_weighting.py  polymarket_simple_client.py  position_sizing.py  real_trader.py  risk_management.py  signal_pipeline.py
potential_junk/duplicate_docs/: AGENT_RESEARCH_PROMPT.md  WEEK_11_12_IMPLEMENTATION_SUMMARY.md  WEEK_13_14_IMPLEMENTATION_SUMMARY.md
potential_junk/duplicate_scripts/: tracker.py
scripts/: add_high_value_whale.py  add_whale_address.py  add_whale_with_stats.py  analyze_all_whales.py  analyze_copy_decisions.py  analyze_historical_data.py  apply_trading_config_migration.py  auto_discover_1000_whales.py  auto_setup_clob.py  backtest_all_whales.py  backtest_elite_strategies.py  bitquery_whale_discovery.py  blockchain_data_collector.py  blockchain_whale_extraction.py  bulk_import_whales.py  calc_24h_metrics.py  calculate_hypothetical_pnl.py  calculate_position_pnl.py  check_data_status.py  check_database_stats.py  check_existing_whales.py  check_recent_trades.py  check_system_health.py  check_timestamps.py  check_trades.py  check_whale_discovery_dates.py  check_whale_tiers.py  clean_fake_whales.py  clear_and_restart_trades.py  close_resolved_positions.py  create_trading_config_table.py  debug_trades_api.py  discover_1000_whales.py  discover_active_whales.py  discover_best_whales.py  discover_from_active_markets.py  discover_from_trades.py  discover_more_whales_aggressive.py  discover_whales.py  discover_whales_public_api.py  (+111 more)
scripts/migrations/: 001_fix_trading_config.sql
services/ingestion/: README.md  main.py
src/: config.py
src/agents/: execution_agent.py  market_intelligence_agent.py  orchestrator_agent.py  performance_attribution_agent.py  risk_management_agent.py  whale_discovery_agent.py
src/analytics/: adaptive_threshold_manager.py  analytics_integration.py  benchmarking_system.py  cusum_edge_decay_detector.py  edge_detection_system.py  market_efficiency_analyzer.py  performance_attribution.py  performance_dashboard.py  performance_metrics_engine.py  realtime_analytics_dashboard.py  realtime_anomaly_detector.py  reporting_engine.py  trade_attribution_analyzer.py  whale_lifecycle_tracker.py
src/api/: polymarket_client.py
src/copy_trading/: __init__.py  advanced_engine.py  engine.py  orderbook_tracker.py  signal_pipeline.py  tracker_fixed.py
src/dashboards/: advanced_dashboard_system.py
src/database/: __init__.py  models.py
src/execution/: execution_analytics_dashboard.py  fill_rate_optimizer.py  latency_optimizer.py  order_book_depth_analyzer.py  smart_order_router.py
src/inefficiency_detection/: behavioral_patterns 2.py  structural_arbitrage.py
src/market_analysis/: regime_detection 2.py
src/monitoring/: alert_notifier.py  dashboard.py
src/optimization/: optimization_integration.py  portfolio_optimizer.py  strategy_optimizer.py  strategy_parameter_optimizer.py
src/orchestration/: whale_adaptive_selector.py  whale_capital_allocator.py  whale_conflict_resolver.py  (+3 more)
tests/: test_enhanced_websocket.py  test_order_executor.py  test_position_management_integration 2.py  test_position_manager.py
(+49 files in other folders)
